-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
EA inode may linked to the lost+found with e2fsck, it caused situation when OI scrub will exclude this inode, but lfsck phase2 want to process this dir entry/inode and link to the namespace. It caused an assertion.
[244527.410105] LustreError: 239272:0:(lfsck_namespace.c:5920:lfsck_namespace_scan_local_lpf_one()) ASSERTION( dt_object_exists(child) ) failed: [244527.411480] LustreError: 239272:0:(lfsck_namespace.c:5920:lfsck_namespace_scan_local_lpf_one()) LBUG [244527.412673] Pid: 239272, comm: lfsck_namespace 4.18.0-305.25.1.el8_4.x86_64+debug #1 SMP Wed Nov 3 10:14:57 UTC 2021 [244527.413911] Call Trace TBD: [244527.414272] [<0>] libcfs_call_trace+0x99/0x140 [libcfs] [244527.414841] [<0>] lbug_with_loc+0xb8/0x180 [libcfs] [244527.415394] [<0>] lfsck_namespace_scan_local_lpf_one+0xb50/0x1360 [lfsck] [244527.416151] [<0>] lfsck_namespace_scan_local_lpf+0xd22/0x1a80 [lfsck] [244527.416845] [<0>] lfsck_namespace_assistant_handler_p2+0x1198/0x1c20 [lfsck] [244527.417605] [<0>] lfsck_assistant_engine+0x3517/0x51b0 [lfsck] [244527.418249] [<0>] kthread+0x344/0x410 [244527.418656] [<0>] ret_from_fork+0x3a/0x50 [244527.419092] Kernel panic - not syncing: LBUG